force-app/main/default/objects/Demonstracao__c/Demonstracao__c.object-meta.xml
<CustomObject>
    <label>Comodato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comodatos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>