force-app/main/default/objects/Demonstracao__c/fields/Assinante2__c.field-meta.xml
<CustomField>
    <fullName>Assinante2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2º Assinante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comodatos (2º Assinante)</relationshipLabel>
    <relationshipName>Comodatos1</relationshipName>
    <type>Lookup</type>
</CustomField>