force-app/main/default/objects/Demonstracao__c/fields/Avaliacao_da_demo_assinada__c.field-meta.xml
<CustomField>
    <fullName>Avaliacao_da_demo_assinada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avaliação da demo assinada</label>
    <type>Checkbox</type>
</CustomField>