force-app/main/default/objects/Demonstracao__c/fields/Clausula_10__c.field-meta.xml
<CustomField>
    <fullName>Clausula_10__c</fullName>
    <label>Clausula 10</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>