force-app/main/default/objects/Demonstracao__c/fields/Clausula_12__c.field-meta.xml
<CustomField>
    <fullName>Clausula_12__c</fullName>
    <label>Clausula 12</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>