force-app/main/default/objects/Demonstracao__c/fields/Clausula_12_Editada__c.field-meta.xml
<CustomField>
    <fullName>Clausula_12_Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clausula 12 Editada</label>
    <type>Checkbox</type>
</CustomField>