force-app/main/default/objects/Demonstracao__c/fields/Clausula_1__c.field-meta.xml
<CustomField>
    <fullName>Clausula_1__c</fullName>
    <label>Clausula 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>