force-app/main/default/objects/Demonstracao__c/fields/Condi_o_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Condi_o_de_pagamento__c</fullName>
    <label>Condição de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Condicoes_de_pagamento</valueSetName>
    </valueSet>
</CustomField>