force-app/main/default/objects/Demonstracao__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Demonstracoes</relationshipName>
    <type>Lookup</type>
</CustomField>