force-app/main/default/objects/Demonstracao__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Demonstracoes</relationshipName>
    <type>Lookup</type>
</CustomField>