force-app/main/default/objects/Demonstracao__c/fields/Data_da_fase__c.field-meta.xml
<CustomField>
    <fullName>Data_da_fase__c</fullName>
    <label>Data da fase</label>
    <type>DateTime</type>
</CustomField>