force-app/main/default/objects/Demonstracao__c/fields/Data_de_envio_dos_equipamentos__c.field-meta.xml
<CustomField>
    <fullName>Data_de_envio_dos_equipamentos__c</fullName>
    <label>Data de envio dos equipamentos</label>
    <type>Date</type>
</CustomField>