force-app/main/default/objects/Demonstracao__c/fields/Data_de_termino__c.field-meta.xml
<CustomField>
    <fullName>Data_de_termino__c</fullName>
    <formula>Data_prevista__c + VALUE(LEFT(Tempo_de_demonstracao__c,FIND(&apos; &apos;,Tempo_de_demonstracao__c)-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de término</label>
    <type>Date</type>
</CustomField>