force-app/main/default/objects/Demonstracao__c/fields/Data_Final__c.field-meta.xml
<CustomField>
    <fullName>Data_Final__c</fullName>
    <label>Data Final</label>
    <type>Date</type>
</CustomField>