force-app/main/default/objects/Demonstracao__c/fields/Data_prevista__c.field-meta.xml
<CustomField>
    <fullName>Data_prevista__c</fullName>
    <label>Data Inicial</label>
    <type>Date</type>
</CustomField>