force-app/main/default/objects/Demonstracao__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departamentos</valueSetName>
    </valueSet>
</CustomField>