force-app/main/default/objects/Demonstracao__c/fields/Documento_Assinado__c.field-meta.xml
<CustomField>
    <fullName>Documento_Assinado__c</fullName>
    <label>Documento Assinado</label>
    <type>Url</type>
</CustomField>