force-app/main/default/objects/Demonstracao__c/fields/Forma_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento__c</fullName>
    <label>Forma de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Formas_de_pagamento</valueSetName>
    </valueSet>
</CustomField>