force-app/main/default/objects/Demonstracao__c/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fornecedor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Demonstracoes2</relationshipName>
    <type>Lookup</type>
</CustomField>