force-app/main/default/objects/Demonstracao__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Demonstracoes</relationshipName>
    <type>Lookup</type>
</CustomField>