force-app/main/default/objects/Demonstracao__c/fields/Prazo_de_validade_da_proposta__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_validade_da_proposta__c</fullName>
    <label>Prazo de validade da proposta</label>
    <type>Date</type>
</CustomField>