force-app/main/default/objects/Demonstracao__c/fields/Proxima_etapa__c.field-meta.xml
<CustomField>
    <fullName>Proxima_etapa__c</fullName>
    <label>Próxima etapa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>