force-app/main/default/objects/Demonstracao__c/fields/Quantidade_de_ativos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_ativos__c</fullName>
    <label>Quantidade de ativos</label>
    <summaryForeignKey>Produto_da_demonstracao__c.Demonstracao__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>