force-app/main/default/objects/Demonstracao__c/fields/Quantidade_proposta__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_proposta__c</fullName>
    <label>Quantidade proposta</label>
    <summaryForeignKey>Produto_da_proposta_do_comodato__c.Comodato__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>