force-app/main/default/objects/Demonstracao__c/fields/Rua__c.field-meta.xml
<CustomField>
    <fullName>Rua__c</fullName>
    <label>Rua</label>
    <type>TextArea</type>
</CustomField>