force-app/main/default/objects/Demonstracao__c/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <formula>TEXT((Data_Final__c)-TODAY()) + &quot; Dia(s)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação</label>
    <type>Text</type>
</CustomField>