force-app/main/default/objects/Demonstracao__c/fields/Situacao_de_consumo__c.field-meta.xml
<CustomField>
    <fullName>Situacao_de_consumo__c</fullName>
    <formula>IF(Valor_requerido_de_venda_mensal2__c &lt;=  Vendas_no_mes_atual__c, IMAGE(&quot;https://cdn.icon-icons.com/icons2/1380/PNG/512/vcsnormal_93488.png&quot;, &quot;Dentro do esperado&quot;, 20, 20)
,IMAGE(&quot;https://cdn.icon-icons.com/icons2/1380/PNG/512/vcsconflicting_93497.png&quot;, &quot;Fora do esperado&quot;, 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação de consumo no mês</label>
    <type>Text</type>
</CustomField>