force-app/main/default/objects/Demonstracao__c/fields/Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Solicitante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitante</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demonstracoes</relationshipName>
    <type>Lookup</type>
</CustomField>