force-app/main/default/objects/Demonstracao__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Rascunho&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Em calibração</fullName>
            </value>
            <value>
                <fullName>Agendado</fullName>
            </value>
            <value>
                <fullName>Em comodato</fullName>
            </value>
            <value>
                <fullName>Retorno da demo</fullName>
                <label>Retorno</label>
            </value>
            <value>
                <fullName>Pendente de retorno</fullName>
            </value>
            <value>
                <fullName>Em Verificação Funcional</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Finalizado com Pendência</fullName>
                <isActive>false</isActive>
                <label>Finalizado com Pendência</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>