force-app/main/default/objects/Demonstracao__c/fields/Tempo_de_demonstracao__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_demonstracao__c</fullName>
    <label>Tempo de demonstração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>