force-app/main/default/objects/Demonstracao__c/fields/Testemunha__c.field-meta.xml
<CustomField>
    <fullName>Testemunha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Testemunha</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comodatos (Testemunha)</relationshipLabel>
    <relationshipName>Comodatos</relationshipName>
    <type>Lookup</type>
</CustomField>