force-app/main/default/objects/Demonstracao__c/fields/Validador__c.field-meta.xml
<CustomField>
    <fullName>Validador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>notEqual</operation>
            <value>HOSPCOM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comodatos (Validador)</relationshipLabel>
    <relationshipName>Comodatos2</relationshipName>
    <type>Lookup</type>
</CustomField>