force-app/main/default/objects/Demonstracao__c/fields/Valor_requerido_de_venda_mensal2__c.field-meta.xml
<CustomField>
    <fullName>Valor_requerido_de_venda_mensal2__c</fullName>
    <label>Valor requerido de venda mensal</label>
    <summarizedField>Consumivel_de_comodato__c.Valor_total__c</summarizedField>
    <summaryForeignKey>Consumivel_de_comodato__c.Comodato__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>