force-app/main/default/objects/Demonstracao__c/fields/Valor_requerido_de_venda_mensal__c.field-meta.xml
<CustomField>
    <fullName>Valor_requerido_de_venda_mensal__c</fullName>
    <label>Valor requerido de venda mensal</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>