force-app/main/default/objects/Demonstracao__c/fields/Valor_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_total__c</fullName>
    <label>Valor total</label>
    <summarizedField>Produto_da_demonstracao__c.Valor__c</summarizedField>
    <summaryForeignKey>Produto_da_demonstracao__c.Demonstracao__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>