force-app/main/default/objects/Demonstracao__c/fields/Valor_total_vendido__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_vendido__c</fullName>
    <label>Valor total vendido</label>
    <summarizedField>Compra_vinculada_ao_comodato__c.Valor__c</summarizedField>
    <summaryForeignKey>Compra_vinculada_ao_comodato__c.Comodato__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>