force-app/main/default/objects/Demonstracao__c/fields/Vendas_no_mes_atual__c.field-meta.xml
<CustomField>
    <fullName>Vendas_no_mes_atual__c</fullName>
    <label>Vendas no mês atual</label>
    <summarizedField>Compra_vinculada_ao_comodato__c.Valor__c</summarizedField>
    <summaryFilterItems>
        <field>Compra_vinculada_ao_comodato__c.M_s__c</field>
        <operation>equals</operation>
        <value>Atual</value>
    </summaryFilterItems>
    <summaryForeignKey>Compra_vinculada_ao_comodato__c.Comodato__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>