force-app/main/default/objects/Demonstracao__c/recordTypes/Comodato.recordType-meta.xml
<RecordType>
    <fullName>Comodato</fullName>
    <active>true</active>
    <label>Comodato</label>
</RecordType>