force-app/main/default/objects/Demonstracao__c/recordTypes/Demonstracao.recordType-meta.xml
<RecordType>
    <fullName>Demonstracao</fullName>
    <active>false</active>
    <description>Para contratos de demonstração</description>
    <label>Demonstração</label>
</RecordType>