force-app/main/default/objects/Demonstracao__c/recordTypes/Emprestimo.recordType-meta.xml
<RecordType>
    <fullName>Emprestimo</fullName>
    <active>false</active>
    <label>Empréstimo</label>
</RecordType>