force-app/main/default/objects/Demonstracao__c/recordTypes/Emprestimo_para_demos_rapidas.recordType-meta.xml
<RecordType>
    <fullName>Emprestimo_para_demos_rapidas</fullName>
    <active>true</active>
    <description>Utilizar para empréstimo de equipamentos utilizados em demonstrações rápidas</description>
    <label>Empréstimo para demos rápidas</label>
</RecordType>