force-app/main/default/objects/Demonstracao__c/validationRules/Avaliac_ass_so_no_retorno.validationRule-meta.xml
<ValidationRule>
    <fullName>Avaliac_ass_so_no_retorno</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
    OR(
        AND(
            ISNEW(),
            Avaliacao_da_demo_assinada__c = true
        ),
        AND(
            PRIORVALUE(Avaliacao_da_demo_assinada__c) != Avaliacao_da_demo_assinada__c,
            TEXT(Status__c) != &apos;Retorno da demo&apos;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Avaliacao_da_demo_assinada__c</errorDisplayField>
    <errorMessage>A Avaliação da demo assinada deve ser anexada, e seu campo marcado, apenas no status RETORNO DA DEMO.</errorMessage>
</ValidationRule>