force-app/main/default/objects/Demonstracao__c/validationRules/Check_ass_so_no_retorno.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_ass_so_no_retorno</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
    OR(
        AND(
            ISNEW(),
            Checklist_assinado__c = true
        ),
        AND(
            PRIORVALUE(Checklist_assinado__c ) != Checklist_assinado__c ,
            TEXT(Status__c) != &apos;Retorno da demo&apos;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Checklist_assinado__c</errorDisplayField>
    <errorMessage>O Checklist assinado deve ser anexado, e seu campo marcado, apenas no status RETORNO DA DEMO.</errorMessage>
</ValidationRule>