force-app/main/default/objects/Demonstracao__c/validationRules/Conta_nao_preenchida.validationRule-meta.xml
<ValidationRule>
    <fullName>Conta_nao_preenchida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
RecordTypeId != &apos;012U4000002zg7d&apos;,
Conta__c== null
)</errorConditionFormula>
    <errorDisplayField>Conta__c</errorDisplayField>
    <errorMessage>A Conta deve ser preenchida.</errorMessage>
</ValidationRule>