force-app/main/default/objects/Demonstracao__c/validationRules/Contato_nao_preenchido.validationRule-meta.xml
<ValidationRule>
    <fullName>Contato_nao_preenchido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
RecordTypeId != &apos;012U4000002zg7d&apos;,
Contato__c == null
)</errorConditionFormula>
    <errorDisplayField>Contato__c</errorDisplayField>
    <errorMessage>O Contato deve ser preenchido.</errorMessage>
</ValidationRule>