force-app/main/default/objects/Demonstracao__c/validationRules/Dados_testemunha.validationRule-meta.xml
<ValidationRule>
    <fullName>Dados_testemunha</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
ISBLANK(Testemunha__r.CPF__c),
ISBLANK(Testemunha__r.Email)
)</errorConditionFormula>
    <errorDisplayField>Testemunha__c</errorDisplayField>
    <errorMessage>Verifique se o email e o CPF da testemunha estão preenchidos.</errorMessage>
</ValidationRule>