force-app/main/default/objects/Demonstracao__c/validationRules/Departamento_nao_preenchido.validationRule-meta.xml
<ValidationRule>
    <fullName>Departamento_nao_preenchido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
RecordTypeId != &apos;012U4000002zg7d&apos;,

    TEXT(Departamento__c)==&apos;&apos;,
    Oportunidade__c = null
)</errorConditionFormula>
    <errorDisplayField>Departamento__c</errorDisplayField>
    <errorMessage>O Departamento deve ser preenchido.</errorMessage>
</ValidationRule>