force-app/main/default/objects/Demonstracao__c/validationRules/Finalizado_e_avaliac_ass_nao_preenchida.validationRule-meta.xml
<ValidationRule>
    <fullName>Finalizado_e_avaliac_ass_nao_preenchida</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.Name == &apos;Demonstração&apos;,
    !$User.Ignorar_erros__c,
    TEXT(Status__c) == &apos;Finalizado&apos;,
    Avaliacao_da_demo_assinada__c ==  false
)</errorConditionFormula>
    <errorDisplayField>Avaliacao_da_demo_assinada__c</errorDisplayField>
    <errorMessage>A Avaliação da demo assinada deve ser anexada, e seu campo marcado, para finalização da demonstração.</errorMessage>
</ValidationRule>