force-app/main/default/objects/Demonstracao__c/validationRules/Finalizado_e_check_ass_nao_preenchido.validationRule-meta.xml
<ValidationRule>
    <fullName>Finalizado_e_check_ass_nao_preenchido</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.Name == &apos;Demonstração&apos;,
    !$User.Ignorar_erros__c,
    TEXT(Status__c) == &apos;Finalizado&apos;,
    Checklist_assinado__c ==  false
)</errorConditionFormula>
    <errorDisplayField>Checklist_assinado__c</errorDisplayField>
    <errorMessage>O Checklist assinado deve ser anexado, e seu campo marcado, para finalização da demonstração.</errorMessage>
</ValidationRule>