force-app/main/default/objects/Demonstracao__c/validationRules/Finalizado_e_nota_ass_nao_preenchida.validationRule-meta.xml
<ValidationRule>
    <fullName>Finalizado_e_nota_ass_nao_preenchida</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.Name == &apos;Demonstração&apos;,
    !$User.Ignorar_erros__c,
    TEXT(Status__c) == &apos;Finalizado&apos;,
    Nota_de_retorno_assinada__c  ==  false
)</errorConditionFormula>
    <errorDisplayField>Nota_de_retorno_assinada__c</errorDisplayField>
    <errorMessage>A Nota de retorno assinada deve ser anexada, e seu campo marcado, para finalização.</errorMessage>
</ValidationRule>