force-app/main/default/objects/Demonstracao__c/validationRules/Fornecedor_nao_preenchido.validationRule-meta.xml
<ValidationRule>
    <fullName>Fornecedor_nao_preenchido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
RecordTypeId != &apos;012U4000002zg7d&apos;,
    Fornecedor__c == null
)</errorConditionFormula>
    <errorDisplayField>Fornecedor__c</errorDisplayField>
    <errorMessage>O Fornecedor deve ser preenchido.</errorMessage>
</ValidationRule>