force-app/main/default/objects/Demonstracao__c/validationRules/Nota_ass_so_no_retorno.validationRule-meta.xml
<ValidationRule>
    <fullName>Nota_ass_so_no_retorno</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
    OR(
        AND(
            ISNEW(),
            Nota_de_retorno_assinada__c = true
        ),
        AND(
            PRIORVALUE(Nota_de_retorno_assinada__c ) != Nota_de_retorno_assinada__c ,
            TEXT(Status__c) != &apos;Retorno da demo&apos;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Nota_de_retorno_assinada__c</errorDisplayField>
    <errorMessage>A Nota de retorno assinada deve ser anexada, e seu campo marcado, apenas no status RETORNO DA DEMO.</errorMessage>
</ValidationRule>