force-app/main/default/objects/Demonstracao__c/validationRules/Solicitante_nao_preenchido.validationRule-meta.xml
<ValidationRule>
    <fullName>Solicitante_nao_preenchido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
RecordTypeId != &apos;0AHU40000000rPJ&apos;,
    Solicitante__c == null
)</errorConditionFormula>
    <errorDisplayField>Solicitante__c</errorDisplayField>
    <errorMessage>O Solicitante deve ser preenchido.</errorMessage>
</ValidationRule>