force-app/main/default/objects/Demonstracao__c/listViews/Todas_as_Demonstra_es.listView-meta.xml
<ListView>
    <fullName>Todas_as_Demonstra_es</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Conta__c</columns>
    <columns>Situacao__c</columns>
    <columns>Status__c</columns>
    <columns>Cidade__c</columns>
    <columns>Estado__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as Demonstrações</label>
</ListView>