force-app/main/default/objects/Demonstracao__c/listViews/Tudo_menos_Finalizadas_e_Canceladas.listView-meta.xml
<ListView>
    <fullName>Tudo_menos_Finalizadas_e_Canceladas</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Solicitante__c</columns>
    <columns>Situacao__c</columns>
    <columns>Status__c</columns>
    <columns>Cidade__c</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Finalizado,Cancelado</value>
    </filters>
    <label>Tudo menos Finalizadas e Canceladas</label>
</ListView>